recursion.logo.square.FourSquare.scala.error
Compilation error:
FourSquare:8: error: ':' expected but ')' found.
  def square(dist){
                 ^FourSquare:14: error: identifier expected but '}' found.
} 
^